--- a/toDo
+++ b/toDo
@@ -1,3 +1,4 @@
 Give credit to the images that aren't mine!
 In cv, remove phone number and mention intro to astro in skils
  sections, workshops, or as relevant course
+maybe add FGRC in CV
